# open_gov_data_visualisation

./: .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
career_visualizer/career_visualizer/: settings.py
career_visualizer/visualizations/: urls.py  views.py
career_visualizer/visualizations/templates/visualizations/: index.html
etl/: __init__.py  loaddata.py
